# zkp-imx

./: CHANGELOG.md  Cargo.toml  Dockerfile  leader.Dockerfile-arm  traces_counting_detailed
evm_arithmetization/src/: all_stark.rs  fixed_recursive_verifier.rs  lib.rs  proof.rs  prover.rs  verifier.rs
evm_arithmetization/src/cpu/kernel/: interpreter.rs
evm_arithmetization/src/generation/: mod.rs  prover_input.rs  state.rs  trie_extractor.rs
evm_arithmetization/src/keccak_sponge/: keccak_sponge_stark.rs
evm_arithmetization/src/memory/: memory_stark.rs  segments.rs
evm_arithmetization/src/memory_after/: columns.rs  memory_after_stark.rs  mod.rs
evm_arithmetization/src/memory_before/: memory_before_stark.rs  mod.rs
evm_arithmetization/src/witness/: traces.rs  transition.rs
evm_arithmetization/tests/: add11_yml.rs  basic_smart_contract.rs  erc20.rs  erc721.rs  log_opcode.rs  self_balance_gas_cost.rs  selfdestruct.rs  simple_transfer.rs  two_to_one_agg.rs  two_to_one_aggregation.rs  withdrawals.rs
proof_gen/src/: proof_types.rs
trace_decoder/: Cargo.toml
trace_decoder/benches/: block_processing.rs
trace_decoder/src/: decoding.rs  lib.rs  processed_block_trace.rs  trace_protocol.rs  types.rs  utils.rs
trace_decoder/src/compact/: compact_prestate_processing.rs  compact_to_partial_trie.rs
trace_decoder/src/type1witness/: reshape.rs  wire.rs
trace_decoder/tests/: test_parsing_and_proving.rs
zero_bin/prover/src/: lib.rs
zero_bin/rpc/src/: lib.rs
zero_bin/rpc/src/native/: state.rs  txn.rs
zero_bin/tools/: prove_rpc.sh  prove_stdio.sh
(+20 files in other folders)
