[package]
name = "trace_decoder"
description = "Processes trace payloads into Intermediate Representation (IR) format."
authors = ["Polygon Zero <bgluth@polygon.technology>"]
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
bytes = { workspace = true }
ciborium = { workspace = true }
ciborium-io = { workspace = true }
enum-as-inner = { workspace = true }
enumn = { workspace = true }
ethereum-types = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
keccak-hash = { workspace = true }
log = { workspace = true }
rlp = { workspace = true }
rlp-derive = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }

# Local dependencies
mpt_trie = { version = "0.3.0", path = "../mpt_trie" }
evm_arithmetization = { version = "0.2.0", path = "../evm_arithmetization" }
anyhow = "1.0.86"
winnow = "0.6.13"
either = "1.12.0"
nunny = { version = "0.2.1", features = ["serde"] }
bitflags = "2.5.0"
bitvec = "1.0.1"

[dev-dependencies]
criterion = "0.5.1"
hex = { workspace = true, features = ["serde"] }
insta = "1.39.0"
pretty_assertions = "1.4.0"
pretty_env_logger = "0.5.0"
serde_json = { workspace = true }

[[bench]]
name = "block_processing"
harness = false
